# gq-insight-mcp

./: .gitignore  README.md  pyproject.toml
data/transcripts/: INT001_onboarding.txt  INT002_pricing.txt  INT003_mobile.txt  INT004_integrations.txt  INT005_churn.txt  INT006_power_user.txt  INT007_support.txt  INT008_security_sso.txt
demo/: record.py
evals/: queries.jsonl
src/gq_insight/: __init__.py  answer.py  cli.py  corpus.py  eval.py  index.py  server.py
tests/: test_corpus.py  test_faithfulness.py  test_retrieval.py
